[package]
name = "hack-emulator"
version = "0.1.0"
authors = ["heftyfunseeker <niccosimone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hack-assembler = { git = 'https://github.com/heftyfunseeker/hack-assembler' }
